removed stripe-demo title & url

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Stripe Payments Demo</title>
+  <title>Hays Stanford | Payments</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="twitter:card" content="summary">
@@ -16,8 +16,8 @@
 <body>
   <div id="main" class="loading">
     <header>
-      <a class="shop" href="/">Stripe Payments Demo</a>
-      <a class="github" href="https://github.com/stripe/stripe-payments-demo">View on GitHub</a>
+      <a class="shop" href="https://blog.haysstanford.com/">Clone Instagram Course</a>
+      <!-- <a class="github" href="https://github.com/stripe/stripe-payments-demo">View on GitHub</a> -->
     </header>
     <div id="checkout">
       <div id="payment-request">
