installed pug in packages

--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@
   <script src="/javascripts/payments.js"></script>
   <script type="text/javascript">
     // make sure to do this onLoad, for example jQuery's $()
-    var str = 'hello there!'
+    var str = userId;
     document.getElementById("email").innerHTML = str;
   </script>
 </body>
