userId query now passes to index. styling is absent

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       <!-- <a class="github" href="https://github.com/stripe/stripe-payments-demo">View on GitHub</a> -->
     </header>
     <div id="checkout">
+      <div>RANDOM TEXT<%= userId %></div>
       <div id="email"></div>
       <div id="payment-request">
         <div id="payment-request-button"></div>
