index.html now updates hidden input userId

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
         <section>
           <h2>Shipping &amp; Billing Information</h2>
           <fieldset class="with-state">
+            <input name="userId" value="<%= userId %>" type="hidden">
             <label>
               <span>Name</span>
               <input name="name" class="field" placeholder="Jenny Rosen" required>
